--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -122,7 +122,6 @@
     "    \n",
     "    def get_product(self, i):\n",
     "        if len(self.queue) > 0:\n",
-    "            # wait for action\n",
     "            self.factory.decision_point.succeed()\n",
     "            self.factory.decision_point = self.env.event()\n",
     "            self.env.process(self.wait_for_action(i))\n",
@@ -134,7 +133,7 @@
     "        self.queue.pop(0)\n",
     "        \n",
     "        # compute_reward\n",
-    "        self.factory.reward.compute_reward(self.env.now, product.ID)\n",
+    "        self.factory.compute_reward(self.env.now, product.ID)\n",
     "        \n",
     "        self.factory.L_q_calculator.change(self.env, False)\n",
     "        self.entity_type_now[i] = product.type\n",
@@ -183,20 +182,23 @@
     "    def process(self,product):\n",
     "        self.is_free = False\n",
     "        print(\"{} : product {} ,type{} start treating at processor{}\".format(self.env.now, product.ID, product.type, self.Processor_id))\n",
-    "        self.factory.state.update_m1(product.ID, -1, self.env.now)\n",
     "        self.env.process(self.processing(product))\n",
     "    \n",
     "    def processing(self, product):\n",
     "        process_time = product.process_time + SET_UP_TIME[self.previous_product_type - 1][product.type - 1] if self.previous_product_type != 0 else product.process_time\n",
     "        \n",
-    "        if process_time != product.process_time:\n",
-    "            self.last_calculate_st = self.env.now \n",
+    "        if process_time != product.process_time or self.previous_product_type == 0:\n",
+    "            self.last_calculate_st = self.env.now\n",
     "        \n",
     "        self.processor_avail_time = process_time + self.env.now\n",
     "        \n",
+    "        #update state\n",
+    "        self.factory.update_s_m1(product.ID, -1, self.env.now)\n",
+    "        self.factory.update_s_m3(self.Processor_id, self.previous_product_type, product.type, self.processor_avail_time)\n",
+    "        \n",
     "        yield self.env.timeout(process_time)\n",
     "        print(\"{} : product {} ,type{} finish treating at processor{}\".format(self.env.now, product.ID, product.type, self.Processor_id))   \n",
-    "        \n",
+    "            \n",
     "        if self.output == self.factory.sink:\n",
     "            self.output.store(product)\n",
     "        else:\n",
@@ -207,8 +209,9 @@
     "        self.processor_avail_time = 0\n",
     "        \n",
     "        # update state\n",
-    "        self.factory.state.update_m1(product.ID, 1, self.env.now)\n",
-    "        self.factory.state.update_m3(self.Processor_id, self.previous_product_type, product.type, self.env.now - self.last_calculate_st, self.processor_avail_time)\n",
+    "        self.factory.update_s_m1(product.ID, 1, self.env.now)\n",
+    "        self.factory.update_s_m3(self.Processor_id, self.previous_product_type, 0, self.processor_avail_time)\n",
+    "        self.factory.update_s_mat()\n",
     "\n",
     "        # decision point\n",
     "        self.queue.get_product(self.Processor_id)\n",
@@ -281,15 +284,15 @@
     "        #get action event\n",
     "        self.get_action = self.env.event()\n",
     "        \n",
-    "        self.state = self.State()\n",
-    "        self.reward = self.Reward()\n",
+    "        self.observation = self.get_initial_state()\n",
+    "        self.reward = 0\n",
     "        \n",
     "    def get_state(self):\n",
-    "        return copy.deepcopy(self.state.observation)\n",
+    "        return copy.deepcopy(self.observation)\n",
     "        \n",
     "    \n",
     "    def get_reward(self):\n",
-    "        return self.reward.reward\n",
+    "        return self.reward\n",
     "        \n",
     "    def append_processor(self, processors, num, name, input_site, output):\n",
     "        for i in range(num):\n",
@@ -310,50 +313,45 @@
     "        reward = self.get_reward()\n",
     "        done = self.terminal.triggered\n",
     "        \n",
-    "        self.reward.reset()\n",
+    "        self.reset_reward()\n",
     "        return state, reward, done\n",
     "        \n",
-    "    class State:\n",
-    "        def __init__(self):\n",
-    "            self.observation = self.get_initial_state()\n",
+    "    #state method\n",
     "            \n",
-    "        def get_initial_state(self):\n",
-    "            matrix_1 = np.zeros((len(JOB_DATA), 6), dtype = np.float32)\n",
-    "            matrix_2 = np.array(SET_UP_TIME, dtype = np.float32)\n",
-    "            matrix_3 = np.zeros((PROCESSORS_AVAILABLE, 4), dtype = np.float32)\n",
+    "    def get_initial_state(self):\n",
+    "        matrix_1 = np.zeros((len(JOB_DATA), 6), dtype = np.float32)\n",
+    "        matrix_2 = np.array(SET_UP_TIME, dtype = np.float32)\n",
+    "        matrix_3 = np.zeros((PROCESSORS_AVAILABLE, 4), dtype = np.float32)\n",
     "\n",
-    "            for i in range(len(matrix_1)):\n",
-    "                matrix_1[i][:len(JOB_DATA[i])] = JOB_DATA[i]\n",
-    "            \n",
-    "            state = []\n",
-    "            state.append(matrix_1)\n",
-    "            state.append(matrix_2)\n",
-    "            state.append(matrix_3)\n",
-    "            return state\n",
+    "        for i in range(len(matrix_1)):\n",
+    "            matrix_1[i][:len(JOB_DATA[i])] = JOB_DATA[i]\n",
+    "\n",
+    "        return [matrix_1, matrix_2, matrix_3]\n",
     "    \n",
-    "        def update_m1(self, job_id, process_state, time):\n",
-    "            self.observation[0][job_id,4] = process_state\n",
-    "            self.observation[0][:,5] = time\n",
+    "    def update_s_m1(self, job_id, process_state, time):\n",
+    "        self.observation[0][job_id,4] = process_state\n",
+    "        self.observation[0][:,5] = time\n",
     "              \n",
-    "        def update_m3(self, machine_id, previous_j_type, now_j_type, set_up_laft, mat):\n",
-    "            self.observation[2][machine_id,:] = [previous_j_type, now_j_type, set_up_laft, mat]\n",
+    "    def update_s_m3(self, machine_id, previous_j_type, now_j_type, mat):\n",
+    "        self.observation[2][machine_id,:-1] = [previous_j_type, now_j_type, mat]\n",
     "    \n",
-    "    class Reward:\n",
-    "        def __init__(self):\n",
-    "            self.reward = 0\n",
+    "    def update_s_mat(self):\n",
+    "        for processor in self.processors_1:\n",
+    "            self.observation[2][processor.Processor_id,-1] = self.env.now - processor.last_calculate_st\n",
     "            \n",
-    "        def compute_reward(self, start_process_t, job_id):\n",
-    "            weights = np.array(WEIGHTS, dtype = np.float32)\n",
-    "            weights = weights / np.sum(weights)\n",
-    "            Latest_start_process_t = JOB_DATA[job_id][3] - JOB_DATA[job_id][2]\n",
-    "            reward = (Latest_start_process_t - start_process_t)/(Latest_start_process_t - JOB_DATA[job_id][1])\n",
-    "            \n",
-    "            weighted_reward = weights[JOB_DATA[job_id][0] - 1] * reward if reward >= 0 else weights[JOB_DATA[job_id][0] - 1] * -100\n",
-    "            \n",
-    "            self.reward += weighted_reward\n",
-    "            \n",
-    "        def reset(self):\n",
-    "            self.reward = 0\n",
+    "    #reward method\n",
+    "    def compute_reward(self, start_process_t, job_id):\n",
+    "        weights = np.array(WEIGHTS, dtype = np.float32)\n",
+    "        weights = weights / np.sum(weights)\n",
+    "        Latest_start_process_t = JOB_DATA[job_id][3] - JOB_DATA[job_id][2]\n",
+    "        reward = (Latest_start_process_t - start_process_t)/(Latest_start_process_t - JOB_DATA[job_id][1])\n",
+    "\n",
+    "        weighted_reward = weights[JOB_DATA[job_id][0] - 1] * reward if reward >= 0 else weights[JOB_DATA[job_id][0] - 1] * -100\n",
+    "\n",
+    "        self.reward += weighted_reward\n",
+    "\n",
+    "    def reset_reward(self):\n",
+    "        self.reward = 0\n",
     "        \n",
     "    class Caculate_L:\n",
     "        def __init__(self):\n",
@@ -418,10 +416,10 @@
       "       [ 3.,  7., 11., 29.,  0., 11.],\n",
       "       [ 2.,  8., 12., 32.,  0., 11.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 11.,  0.],\n",
-      "       [ 0.,  0.,  0.,  0.],\n",
-      "       [ 0.,  0.,  0.,  0.]], dtype=float32)], action:2, reward:0.1666666716337204\n",
-      "action:4, queue:[3, 4, 6, 7]\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  0.,  0., 10.],\n",
+      "       [ 0.,  2., 14.,  9.],\n",
+      "       [ 0.,  1., 13.,  8.]], dtype=float32)], action:2, reward:0.1666666716337204\n",
+      "action:2, queue:[3, 4, 6, 7]\n",
       "13 : product 3 ,type3 start treating at processor2\n",
       "14 : product 1 ,type2 finish treating at processor1\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 13.],\n",
@@ -433,10 +431,10 @@
       "       [ 3.,  7., 11., 29.,  0., 13.],\n",
       "       [ 2.,  8., 12., 32.,  0., 13.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 11.,  0.],\n",
-      "       [ 0.,  0.,  0.,  0.],\n",
-      "       [ 1.,  1., 13.,  0.]], dtype=float32)], action:4, reward:0.06060606241226196\n",
-      "action:3, queue:[4, 6, 7]\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21., 12.],\n",
+      "       [ 0.,  2., 14., 11.],\n",
+      "       [ 1.,  0.,  0., 10.]], dtype=float32)], action:2, reward:0.06060606241226196\n",
+      "action:1, queue:[4, 6, 7]\n",
       "14 : product 4 ,type3 start treating at processor1\n",
       "21 : product 5 ,type1 finish treating at processor0\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 14.],\n",
@@ -448,10 +446,10 @@
       "       [ 3.,  7., 11., 29.,  0., 14.],\n",
       "       [ 2.,  8., 12., 32.,  0., 14.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 11.,  0.],\n",
-      "       [ 2.,  2., 14.,  0.],\n",
-      "       [ 1.,  1., 13.,  0.]], dtype=float32)], action:3, reward:0.06060606241226196\n",
-      "action:1, queue:[6, 7]\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21., 13.],\n",
+      "       [ 2.,  0.,  0., 12.],\n",
+      "       [ 1.,  3., 25.,  1.]], dtype=float32)], action:1, reward:0.06060606241226196\n",
+      "action:3, queue:[6, 7]\n",
       "21 : product 6 ,type3 start treating at processor0\n",
       "25 : product 3 ,type3 finish treating at processor2\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 21.],\n",
@@ -463,10 +461,10 @@
       "       [ 3.,  7., 11., 29.,  0., 21.],\n",
       "       [ 2.,  8., 12., 32.,  0., 21.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21.,  0.],\n",
-      "       [ 2.,  2., 14.,  0.],\n",
-      "       [ 1.,  1., 13.,  0.]], dtype=float32)], action:1, reward:-33.33333432674408\n",
-      "action:3, queue:[7]\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  0.,  0., 20.],\n",
+      "       [ 2.,  3., 28.,  7.],\n",
+      "       [ 1.,  3., 25.,  8.]], dtype=float32)], action:3, reward:-33.33333432674408\n",
+      "action:4, queue:[7]\n",
       "25 : product 7 ,type2 start treating at processor2\n",
       "28 : product 4 ,type3 finish treating at processor1\n",
       "33 : product 6 ,type3 finish treating at processor0\n",
@@ -480,9 +478,9 @@
       "       [ 3.,  7., 11., 29., -1., 25.],\n",
       "       [ 2.,  8., 12., 32.,  0., 25.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21.,  0.],\n",
-      "       [ 2.,  2., 14.,  0.],\n",
-      "       [ 3.,  3., 12.,  0.]], dtype=float32)], action:3, reward:-33.33333432674408\n"
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 33.,  4.],\n",
+      "       [ 2.,  3., 28., 11.],\n",
+      "       [ 3.,  0.,  0., 12.]], dtype=float32)], action:4, reward:-33.33333432674408\n"
      ]
     }
    ],
