--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "PROCESSORS_AVAILABLE = 3\n",
     "\n",
-    "ACTION_SPACES = 5  #[SPT,EDD,MST,ST,CR]"
+    "ACTION_SPACES = 6  #[SPT,EDD,MST,ST,CR,MWF]"
    ]
   },
   {
@@ -160,6 +160,8 @@
     "            self.queue.sort(key = lambda entity : entity.due_dates - entity.process_time)\n",
     "        elif rule_for_sorting == 4: #CR\n",
     "            self.queue.sort(key = lambda entity : entity.due_dates / entity.process_time)\n",
+    "        elif rule_for_sorting == 5: #Max_weight_first\n",
+    "            self.queue.sort(key = lambda entity : -WEIGHTS[entity.type - 1])\n",
     "            \n",
     "        print('action:{}, queue:{}'.format(rule_for_sorting, [p.ID for p in self.queue]))\n",
     "            \n",
@@ -222,16 +224,20 @@
     "        self.input = 0\n",
     "        self.warehouse = []\n",
     "        self.factory = factory\n",
+    "        self.number_of_late = np.zeros(len(SET_UP_TIME))\n",
     "          \n",
     "    def store(self, product):\n",
     "        self.factory.L_calculator.change(self.env, False)\n",
-    "        self.input += 1  \n",
+    "        self.input += 1 \n",
+    "        product.finish_time = self.env.now\n",
+    "        if product.finish_time > product.due_dates:\n",
+    "            self.number_of_late[product.type - 1] += 1\n",
     "        \n",
     "        if self.input >= len(JOB_DATA):\n",
     "            self.factory.decision_point.succeed()\n",
     "            self.factory.terminal.succeed()\n",
     "            \n",
-    "        product.finish_time = self.env.now\n",
+    "        \n",
     "        self.warehouse.append(product)\n",
     "    \n",
     "    def update(self):\n",
@@ -312,9 +318,10 @@
     "        state = self.get_state()\n",
     "        reward = self.get_reward()\n",
     "        done = self.terminal.triggered\n",
+    "        info = self.sink.number_of_late\n",
     "        \n",
     "        self.reset_reward()\n",
-    "        return state, reward, done\n",
+    "        return state, reward, done, info\n",
     "        \n",
     "    #state method\n",
     "            \n",
@@ -322,7 +329,6 @@
     "        matrix_1 = np.zeros((len(JOB_DATA), 6), dtype = np.float32)\n",
     "        matrix_2 = np.array(SET_UP_TIME, dtype = np.float32)\n",
     "        matrix_3 = np.zeros((PROCESSORS_AVAILABLE, 4), dtype = np.float32)\n",
-    "\n",
     "        for i in range(len(matrix_1)):\n",
     "            matrix_1[i][:len(JOB_DATA[i])] = JOB_DATA[i]\n",
     "\n",
@@ -404,8 +410,8 @@
       "7 : product 6 ,type3 arrive\n",
       "8 : product 7 ,type2 arrive\n",
       "11 : product 0 ,type1 finish treating at processor0\n",
-      "action:2, queue:[5, 3, 4, 6, 7]\n",
-      "11 : product 5 ,type1 start treating at processor0\n",
+      "action:3, queue:[3, 4, 5, 6, 7]\n",
+      "11 : product 3 ,type3 start treating at processor0\n",
       "13 : product 2 ,type1 finish treating at processor2\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 11.],\n",
       "       [ 2.,  2., 12., 26., -1., 11.],\n",
@@ -418,69 +424,70 @@
       "       [2., 0., 3.],\n",
       "       [2., 3., 0.]], dtype=float32), array([[ 1.,  0.,  0., 10.],\n",
       "       [ 0.,  2., 14.,  9.],\n",
-      "       [ 0.,  1., 13.,  8.]], dtype=float32)], action:2, reward:0.1666666716337204\n",
-      "action:2, queue:[3, 4, 6, 7]\n",
-      "13 : product 3 ,type3 start treating at processor2\n",
+      "       [ 0.,  1., 13.,  8.]], dtype=float32)], action:3, reward:0.12121212482452393\n",
+      "action:4, queue:[4, 5, 6, 7]\n",
+      "13 : product 4 ,type3 start treating at processor2\n",
       "14 : product 1 ,type2 finish treating at processor1\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 13.],\n",
       "       [ 2.,  2., 12., 26., -1., 13.],\n",
       "       [ 1.,  3., 10., 23.,  1., 13.],\n",
-      "       [ 3.,  4., 11., 26.,  0., 13.],\n",
+      "       [ 3.,  4., 11., 26., -1., 13.],\n",
       "       [ 3.,  5., 11., 27.,  0., 13.],\n",
-      "       [ 1.,  6., 10., 26., -1., 13.],\n",
+      "       [ 1.,  6., 10., 26.,  0., 13.],\n",
       "       [ 3.,  7., 11., 29.,  0., 13.],\n",
       "       [ 2.,  8., 12., 32.,  0., 13.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21., 12.],\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 23.,  2.],\n",
       "       [ 0.,  2., 14., 11.],\n",
-      "       [ 1.,  0.,  0., 10.]], dtype=float32)], action:2, reward:0.06060606241226196\n",
-      "action:1, queue:[4, 6, 7]\n",
-      "14 : product 4 ,type3 start treating at processor1\n",
-      "21 : product 5 ,type1 finish treating at processor0\n",
+      "       [ 1.,  0.,  0., 10.]], dtype=float32)], action:4, reward:0.09090909361839294\n",
+      "action:4, queue:[5, 6, 7]\n",
+      "14 : product 5 ,type1 start treating at processor1\n",
+      "23 : product 3 ,type3 finish treating at processor0\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 14.],\n",
       "       [ 2.,  2., 12., 26.,  1., 14.],\n",
       "       [ 1.,  3., 10., 23.,  1., 14.],\n",
       "       [ 3.,  4., 11., 26., -1., 14.],\n",
-      "       [ 3.,  5., 11., 27.,  0., 14.],\n",
-      "       [ 1.,  6., 10., 26., -1., 14.],\n",
+      "       [ 3.,  5., 11., 27., -1., 14.],\n",
+      "       [ 1.,  6., 10., 26.,  0., 14.],\n",
       "       [ 3.,  7., 11., 29.,  0., 14.],\n",
       "       [ 2.,  8., 12., 32.,  0., 14.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  1., 21., 13.],\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 23.,  3.],\n",
       "       [ 2.,  0.,  0., 12.],\n",
-      "       [ 1.,  3., 25.,  1.]], dtype=float32)], action:1, reward:0.06060606241226196\n",
+      "       [ 1.,  3., 25.,  1.]], dtype=float32)], action:4, reward:0.06666666865348816\n",
       "action:3, queue:[6, 7]\n",
-      "21 : product 6 ,type3 start treating at processor0\n",
-      "25 : product 3 ,type3 finish treating at processor2\n",
-      "state:[array([[ 1.,  1., 10., 21.,  1., 21.],\n",
-      "       [ 2.,  2., 12., 26.,  1., 21.],\n",
-      "       [ 1.,  3., 10., 23.,  1., 21.],\n",
-      "       [ 3.,  4., 11., 26., -1., 21.],\n",
-      "       [ 3.,  5., 11., 27., -1., 21.],\n",
-      "       [ 1.,  6., 10., 26.,  1., 21.],\n",
-      "       [ 3.,  7., 11., 29.,  0., 21.],\n",
-      "       [ 2.,  8., 12., 32.,  0., 21.]], dtype=float32), array([[0., 3., 1.],\n",
+      "23 : product 6 ,type3 start treating at processor0\n",
+      "25 : product 4 ,type3 finish treating at processor2\n",
+      "state:[array([[ 1.,  1., 10., 21.,  1., 23.],\n",
+      "       [ 2.,  2., 12., 26.,  1., 23.],\n",
+      "       [ 1.,  3., 10., 23.,  1., 23.],\n",
+      "       [ 3.,  4., 11., 26.,  1., 23.],\n",
+      "       [ 3.,  5., 11., 27., -1., 23.],\n",
+      "       [ 1.,  6., 10., 26., -1., 23.],\n",
+      "       [ 3.,  7., 11., 29.,  0., 23.],\n",
+      "       [ 2.,  8., 12., 32.,  0., 23.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  0.,  0., 20.],\n",
-      "       [ 2.,  3., 28.,  7.],\n",
-      "       [ 1.,  3., 25.,  8.]], dtype=float32)], action:3, reward:-33.33333432674408\n",
-      "action:4, queue:[7]\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 3.,  0.,  0., 12.],\n",
+      "       [ 2.,  1., 26.,  9.],\n",
+      "       [ 1.,  3., 25., 10.]], dtype=float32)], action:3, reward:-33.33333432674408\n",
+      "action:2, queue:[7]\n",
       "25 : product 7 ,type2 start treating at processor2\n",
-      "28 : product 4 ,type3 finish treating at processor1\n",
-      "33 : product 6 ,type3 finish treating at processor0\n",
+      "26 : product 5 ,type1 finish treating at processor1\n",
+      "34 : product 6 ,type3 finish treating at processor0\n",
       "40 : product 7 ,type2 finish treating at processor2\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 25.],\n",
       "       [ 2.,  2., 12., 26.,  1., 25.],\n",
       "       [ 1.,  3., 10., 23.,  1., 25.],\n",
       "       [ 3.,  4., 11., 26.,  1., 25.],\n",
-      "       [ 3.,  5., 11., 27., -1., 25.],\n",
-      "       [ 1.,  6., 10., 26.,  1., 25.],\n",
+      "       [ 3.,  5., 11., 27.,  1., 25.],\n",
+      "       [ 1.,  6., 10., 26., -1., 25.],\n",
       "       [ 3.,  7., 11., 29., -1., 25.],\n",
       "       [ 2.,  8., 12., 32.,  0., 25.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 33.,  4.],\n",
-      "       [ 2.,  3., 28., 11.],\n",
-      "       [ 3.,  0.,  0., 12.]], dtype=float32)], action:4, reward:-33.33333432674408\n"
+      "       [2., 3., 0.]], dtype=float32), array([[ 3.,  3., 34., 14.],\n",
+      "       [ 2.,  1., 26., 11.],\n",
+      "       [ 3.,  0.,  0., 12.]], dtype=float32)], action:2, reward:-33.33333432674408\n",
+      "Number of late submissions: [0. 1. 1.]\n"
      ]
     }
    ],
@@ -490,10 +497,11 @@
     "\n",
     "while True:\n",
     "    action = np.random.randint(5)\n",
-    "    next_state, reward, done = env.step(action)\n",
+    "    next_state, reward, done, info = env.step(action)\n",
     "    print('state:{}, action:{}, reward:{}'.format(state, action, reward))\n",
     "    state = next_state\n",
     "    if done:\n",
+    "        print('Number of late submissions:',info)\n",
     "        break\n"
    ]
   },
