--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -39,7 +39,7 @@
     "               [2,0,3],\n",
     "               [2,3,0]]\n",
     "\n",
-    "WEIGHTS = [1,1,1]\n",
+    "WEIGHTS = [1,5,1]\n",
     "\n",
     "QUEUE_MAX_CONTENT = float('inf')\n",
     "\n",
@@ -132,9 +132,6 @@
     "        product = self.queue[0]\n",
     "        self.queue.pop(0)\n",
     "        \n",
-    "        # compute_reward\n",
-    "        self.factory.compute_reward(self.env.now, product.ID)\n",
-    "        \n",
     "        self.factory.L_q_calculator.change(self.env, False)\n",
     "        self.entity_type_now[i] = product.type\n",
     "        self.processors[i].process(product)\n",
@@ -160,8 +157,8 @@
     "            self.queue.sort(key = lambda entity : entity.due_dates - entity.process_time)\n",
     "        elif rule_for_sorting == 4: #CR\n",
     "            self.queue.sort(key = lambda entity : entity.due_dates / entity.process_time)\n",
-    "        elif rule_for_sorting == 5: #Max_weight_first\n",
-    "            self.queue.sort(key = lambda entity : -WEIGHTS[entity.type - 1])\n",
+    "        elif rule_for_sorting == 5:  #WSPT\n",
+    "            self.queue.sort(key = lambda entity : entity.process_time/WEIGHTS[entity.type -1])\n",
     "            \n",
     "        print('action:{}, queue:{}'.format(rule_for_sorting, [p.ID for p in self.queue]))\n",
     "            \n",
@@ -198,6 +195,8 @@
     "        self.factory.update_s_m1(product.ID, -1, self.env.now)\n",
     "        self.factory.update_s_m3(self.Processor_id, self.previous_product_type, product.type, self.processor_avail_time)\n",
     "        \n",
+    "        # compute_reward\n",
+    "        self.factory.compute_reward(self.env.now, process_time, product.ID)\n",
     "        yield self.env.timeout(process_time)\n",
     "        print(\"{} : product {} ,type{} finish treating at processor{}\".format(self.env.now, product.ID, product.type, self.Processor_id))   \n",
     "            \n",
@@ -346,12 +345,12 @@
     "            self.observation[2][processor.Processor_id,-1] = self.env.now - processor.last_calculate_st\n",
     "            \n",
     "    #reward method\n",
-    "    def compute_reward(self, start_process_t, job_id):\n",
+    "    def compute_reward(self, start_process_t, process_t, job_id):\n",
     "        weights = np.array(WEIGHTS, dtype = np.float32)\n",
     "        weights = weights / np.sum(weights)\n",
-    "        Latest_start_process_t = JOB_DATA[job_id][3] - JOB_DATA[job_id][2]\n",
+    "        Latest_start_process_t = JOB_DATA[job_id][3] - process_t\n",
     "        reward = (Latest_start_process_t - start_process_t)/(Latest_start_process_t - JOB_DATA[job_id][1])\n",
-    "\n",
+    "        print(Latest_start_process_t, start_process_t, job_id)\n",
     "        weighted_reward = weights[JOB_DATA[job_id][0] - 1] * reward if reward >= 0 else weights[JOB_DATA[job_id][0] - 1] * -100\n",
     "\n",
     "        self.reward += weighted_reward\n",
@@ -400,18 +399,22 @@
      "text": [
       "1 : product 0 ,type1 arrive\n",
       "1 : product 0 ,type1 start treating at processor0\n",
+      "11 1 0\n",
       "2 : product 1 ,type2 arrive\n",
       "2 : product 1 ,type2 start treating at processor1\n",
+      "14 2 1\n",
       "3 : product 2 ,type1 arrive\n",
       "3 : product 2 ,type1 start treating at processor2\n",
+      "13 3 2\n",
       "4 : product 3 ,type3 arrive\n",
       "5 : product 4 ,type3 arrive\n",
       "6 : product 5 ,type1 arrive\n",
       "7 : product 6 ,type3 arrive\n",
       "8 : product 7 ,type2 arrive\n",
       "11 : product 0 ,type1 finish treating at processor0\n",
-      "action:3, queue:[3, 4, 5, 6, 7]\n",
-      "11 : product 3 ,type3 start treating at processor0\n",
+      "action:5, queue:[7, 5, 3, 4, 6]\n",
+      "11 : product 7 ,type2 start treating at processor0\n",
+      "17 11 7\n",
       "13 : product 2 ,type1 finish treating at processor2\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 11.],\n",
       "       [ 2.,  2., 12., 26., -1., 11.],\n",
@@ -424,70 +427,74 @@
       "       [2., 0., 3.],\n",
       "       [2., 3., 0.]], dtype=float32), array([[ 1.,  0.,  0., 10.],\n",
       "       [ 0.,  2., 14.,  9.],\n",
-      "       [ 0.,  1., 13.,  8.]], dtype=float32)], action:3, reward:0.12121212482452393\n",
-      "action:4, queue:[4, 5, 6, 7]\n",
-      "13 : product 4 ,type3 start treating at processor2\n",
+      "       [ 0.,  1., 13.,  8.]], dtype=float32)], action:5, reward:1.476190517346064\n",
+      "action:5, queue:[5, 3, 4, 6]\n",
+      "13 : product 5 ,type1 start treating at processor2\n",
+      "16 13 5\n",
       "14 : product 1 ,type2 finish treating at processor1\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 13.],\n",
       "       [ 2.,  2., 12., 26., -1., 13.],\n",
       "       [ 1.,  3., 10., 23.,  1., 13.],\n",
-      "       [ 3.,  4., 11., 26., -1., 13.],\n",
+      "       [ 3.,  4., 11., 26.,  0., 13.],\n",
       "       [ 3.,  5., 11., 27.,  0., 13.],\n",
       "       [ 1.,  6., 10., 26.,  0., 13.],\n",
       "       [ 3.,  7., 11., 29.,  0., 13.],\n",
-      "       [ 2.,  8., 12., 32.,  0., 13.]], dtype=float32), array([[0., 3., 1.],\n",
+      "       [ 2.,  8., 12., 32., -1., 13.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 23.,  2.],\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  2., 26.,  2.],\n",
       "       [ 0.,  2., 14., 11.],\n",
-      "       [ 1.,  0.,  0., 10.]], dtype=float32)], action:4, reward:0.09090909361839294\n",
-      "action:4, queue:[5, 6, 7]\n",
-      "14 : product 5 ,type1 start treating at processor1\n",
-      "23 : product 3 ,type3 finish treating at processor0\n",
+      "       [ 1.,  0.,  0., 10.]], dtype=float32)], action:5, reward:0.042857144773006436\n",
+      "action:5, queue:[3, 4, 6]\n",
+      "14 : product 3 ,type3 start treating at processor1\n",
+      "12 14 3\n",
+      "23 : product 5 ,type1 finish treating at processor2\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 14.],\n",
       "       [ 2.,  2., 12., 26.,  1., 14.],\n",
       "       [ 1.,  3., 10., 23.,  1., 14.],\n",
-      "       [ 3.,  4., 11., 26., -1., 14.],\n",
-      "       [ 3.,  5., 11., 27., -1., 14.],\n",
-      "       [ 1.,  6., 10., 26.,  0., 14.],\n",
+      "       [ 3.,  4., 11., 26.,  0., 14.],\n",
+      "       [ 3.,  5., 11., 27.,  0., 14.],\n",
+      "       [ 1.,  6., 10., 26., -1., 14.],\n",
       "       [ 3.,  7., 11., 29.,  0., 14.],\n",
-      "       [ 2.,  8., 12., 32.,  0., 14.]], dtype=float32), array([[0., 3., 1.],\n",
+      "       [ 2.,  8., 12., 32., -1., 14.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  3., 23.,  3.],\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  2., 26.,  3.],\n",
       "       [ 2.,  0.,  0., 12.],\n",
-      "       [ 1.,  3., 25.,  1.]], dtype=float32)], action:4, reward:0.06666666865348816\n",
-      "action:3, queue:[6, 7]\n",
-      "23 : product 6 ,type3 start treating at processor0\n",
-      "25 : product 4 ,type3 finish treating at processor2\n",
+      "       [ 1.,  1., 23., 11.]], dtype=float32)], action:5, reward:-14.28571492433548\n",
+      "action:5, queue:[4, 6]\n",
+      "23 : product 4 ,type3 start treating at processor2\n",
+      "15 23 4\n",
+      "26 : product 7 ,type2 finish treating at processor0\n",
       "state:[array([[ 1.,  1., 10., 21.,  1., 23.],\n",
       "       [ 2.,  2., 12., 26.,  1., 23.],\n",
       "       [ 1.,  3., 10., 23.,  1., 23.],\n",
-      "       [ 3.,  4., 11., 26.,  1., 23.],\n",
-      "       [ 3.,  5., 11., 27., -1., 23.],\n",
-      "       [ 1.,  6., 10., 26., -1., 23.],\n",
+      "       [ 3.,  4., 11., 26., -1., 23.],\n",
+      "       [ 3.,  5., 11., 27.,  0., 23.],\n",
+      "       [ 1.,  6., 10., 26.,  1., 23.],\n",
       "       [ 3.,  7., 11., 29.,  0., 23.],\n",
-      "       [ 2.,  8., 12., 32.,  0., 23.]], dtype=float32), array([[0., 3., 1.],\n",
+      "       [ 2.,  8., 12., 32., -1., 23.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 3.,  0.,  0., 12.],\n",
-      "       [ 2.,  1., 26.,  9.],\n",
-      "       [ 1.,  3., 25., 10.]], dtype=float32)], action:3, reward:-33.33333432674408\n",
-      "action:2, queue:[7]\n",
-      "25 : product 7 ,type2 start treating at processor2\n",
-      "26 : product 5 ,type1 finish treating at processor1\n",
-      "34 : product 6 ,type3 finish treating at processor0\n",
-      "40 : product 7 ,type2 finish treating at processor2\n",
-      "state:[array([[ 1.,  1., 10., 21.,  1., 25.],\n",
-      "       [ 2.,  2., 12., 26.,  1., 25.],\n",
-      "       [ 1.,  3., 10., 23.,  1., 25.],\n",
-      "       [ 3.,  4., 11., 26.,  1., 25.],\n",
-      "       [ 3.,  5., 11., 27.,  1., 25.],\n",
-      "       [ 1.,  6., 10., 26., -1., 25.],\n",
-      "       [ 3.,  7., 11., 29., -1., 25.],\n",
-      "       [ 2.,  8., 12., 32.,  0., 25.]], dtype=float32), array([[0., 3., 1.],\n",
+      "       [2., 3., 0.]], dtype=float32), array([[ 1.,  2., 26., 12.],\n",
+      "       [ 2.,  3., 28.,  9.],\n",
+      "       [ 1.,  0.,  0., 20.]], dtype=float32)], action:5, reward:-14.28571492433548\n",
+      "action:5, queue:[6]\n",
+      "26 : product 6 ,type3 start treating at processor0\n",
+      "15 26 6\n",
+      "28 : product 3 ,type3 finish treating at processor1\n",
+      "35 : product 4 ,type3 finish treating at processor2\n",
+      "40 : product 6 ,type3 finish treating at processor0\n",
+      "state:[array([[ 1.,  1., 10., 21.,  1., 26.],\n",
+      "       [ 2.,  2., 12., 26.,  1., 26.],\n",
+      "       [ 1.,  3., 10., 23.,  1., 26.],\n",
+      "       [ 3.,  4., 11., 26., -1., 26.],\n",
+      "       [ 3.,  5., 11., 27., -1., 26.],\n",
+      "       [ 1.,  6., 10., 26.,  1., 26.],\n",
+      "       [ 3.,  7., 11., 29.,  0., 26.],\n",
+      "       [ 2.,  8., 12., 32.,  1., 26.]], dtype=float32), array([[0., 3., 1.],\n",
       "       [2., 0., 3.],\n",
-      "       [2., 3., 0.]], dtype=float32), array([[ 3.,  3., 34., 14.],\n",
-      "       [ 2.,  1., 26., 11.],\n",
-      "       [ 3.,  0.,  0., 12.]], dtype=float32)], action:2, reward:-33.33333432674408\n",
-      "Number of late submissions: [0. 1. 1.]\n"
+      "       [2., 3., 0.]], dtype=float32), array([[ 2.,  0.,  0., 15.],\n",
+      "       [ 2.,  3., 28., 12.],\n",
+      "       [ 1.,  3., 35.,  3.]], dtype=float32)], action:5, reward:-14.28571492433548\n",
+      "Number of late submissions: [0. 0. 3.]\n"
      ]
     }
    ],
@@ -496,7 +503,7 @@
     "state = env.reset()\n",
     "\n",
     "while True:\n",
-    "    action = np.random.randint(5)\n",
+    "    action = 5\n",
     "    next_state, reward, done, info = env.step(action)\n",
     "    print('state:{}, action:{}, reward:{}'.format(state, action, reward))\n",
     "    state = next_state\n",
